chore: move render.yaml to root and configure rootDir

--- a/render.yaml
+++ b/render.yaml
@@ -2,6 +2,7 @@ services:
   - type: web
     name: exam-prep-backend
     env: go
+    rootDir: backend
     plan: free
     buildCommand: go mod tidy && go build -o app .
     startCommand: ./app
