--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,7 @@ services:
     env: go
     rootDir: backend
     plan: free
-    buildCommand: go mod tidy && go build -o app .
+    buildCommand: go mod tidy && go build -o app . && ls -la && chmod +x app
     startCommand: ./app
     envVars:
       - key: SERVER_PORT
